# pace-me

./: README.md  cabal.project  pacemaker.cabal
src/: Main.hs
src/XTL/: Regex.hs  String.hs  Utils.hs
test/: TestMain.hs  TestRegex.hs
