cabal-version:       2.4
name:                pacemaker
version:             0.1.0.0
build-type:          Simple

executable pacemaker
  main-is:           Main.hs
  build-depends:     base >=4.7 && <5
                   , text
                   , pcre-light >= 0.4.1.2
                   , bytestring
                   , haskeline >= 0.8
  hs-source-dirs:    src
  other-modules:     XTL.Regex, XTL.String, XTL.Utils
  default-language:  Haskell2010
