cabal-version:       2.4
name:                pacemaker
version:             0.1.0.0
build-type:          Simple

executable pacemaker
  main-is:           Main.hs
  build-depends:     base >=4.7 && <5
                   , text
                   , pcre-light >= 0.4.1.2
                   , bytestring
                   , haskeline >= 0.8
                   , tasty
                   , tasty-hunit
  hs-source-dirs:    src
  other-modules:     XTL.Regex, XTL.String, XTL.Utils
  default-language:  Haskell2010

test-suite my-tests
  type:              exitcode-stdio-1.0
  main-is:           TestMain.hs
  hs-source-dirs:    src, test
  build-depends:     base
                   , text
                   , pcre-light
                   , bytestring
                   , tasty
                   , tasty-hunit
  default-language:  Haskell2010
  other-modules:     TestRegex, XTL.Regex, XTL.String
